# vidad

./: .gitignore  .replit  API_KEYS_SETUP.md  README.md  SCAN_REPORT.md  app.py  generate_icons.py  pyproject.toml  replicate_generator.py  replit.md  requirements.txt  sora_generator.py  templates.py  video_effects.py  video_generator.py
attached_assets/: Pasted-Project-Prompt-AI-Video-Ads-Generator-with-Gemini-API-Pre-Built-Templates-Pre-Written-Text-Prompt-1764000839866_1764000839867.txt
static/: manifest.json  sw.js
static/css/: style.css
static/js/: app.js  pwa.js  settings.js
templates/: index.html  settings.html
